--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
 	"ws": "^3.3.2"
-	"url": 
-	"http": 
   },
   "devDependencies": {
     "request": "^2.81.0",
