--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-	"ws": "^3.3.2"
+	"ws": "^3.3.2",
+	"body-parser": "^1.18.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
